# procon-2023

./: .gitignore  .gitmodules
cpp-simulator/Procon2023/: .gitignore  CMakeLists.txt  CMakePresets.json  actions.txt  actions_processed.txt  fetch_all_games.js  game_interfaces  game_interfaces.cpp  game_interfaces.h  game_interfaces_binding.cpp  ipython_cell_input.py  process_actions,js  procon-jumanji.ipynb  procon-jumanji_profiler.ipynb  requirements.txt  requirements_gpu.txt  requirements_mac.txt  test-game.py  test-jumanji.ipynb  test.ipynb  utils.py
cpp-simulator/Procon2023/scripts/: process_actions.js  process_maps.js
cpp-simulator/Procon2023/test-cases/: map-244-game-1.txt  map-248-game-1.txt  map-251-game-2.txt  map-259-game-2.txt  map-260-game-1.txt  map-278-generated-field-game-2.txt  map-284-ctu-game-game-1.txt  map-306-generated-field-game-2.txt  map-309-ptit-test-game-3.txt  map-312-siu-field-game-1.txt  map-364-ctu-test-game-1.txt  map-367-generated-field-game-2.txt  map-370-dtu-field-1-game-2.txt  map-371-dtu-field-2-game-1.txt  map-376-dtu-field-4-game-2.txt  map-377-dtu-field-5-game-1.txt  map-391-generated-field-game-1.txt  map-395-ctu-12-11-game-1.txt  map-399-test-he-thong-tran-dau-3-game-1.txt  map-400-test-he-thong-tran-dau-3-game-2.txt  match-247.txt  match-248.txt  match-249.txt  match-250.txt  match-251.txt  match-258.txt  match-260.txt  match-288.txt  match-295.txt  match-296.txt  match-305.txt  match-308.txt  match-310.txt  match-322.txt  match-365.txt  match-393.txt  match-395.txt
gui/: action_button.gd  ai_agent_info.gd  ai_agent_info.tscn  (+20 more)
(+133 files in other folders)
